Small fixes, implemented password visibility button

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -13,6 +13,10 @@ code {
     monospace;
 }
 
+textarea {
+  resize: none;
+}
+
 .layout {
   margin-top: 66px;
 }
